# etf_strategy

./: .gitignore  README.md  past-convo.md  pyproject.toml  requirements.txt
data/processed/: features.parquet  macro.parquet  prices.parquet
docs/plans/: 2026-06-29-strategy-a-rung1.md
docs/specs/: 2026-06-29-sector-etf-rotation-design.md
experiments/: H_strategy_a.md
experiments/configs/: strategy_a.json
notebooks/: strategy_a.ipynb
src/etf/data/: build_panel.py  ingest_macro.py  ingest_prices.py
src/etf/features/: build_features.py
src/etf/strategy/: allocate.py  constants.py  strategy_a.py
src/etf/utils/: backtest.py  benchmarks.py  validation.py  walkforward.py
tests/data/: test_build_panel.py  test_ingest_macro.py  test_ingest_prices.py
tests/features/: test_assemble.py  test_build_features.py
tests/strategy/: test_allocate.py  test_constants.py  test_strategy_a.py
tests/utils/: test_backtest.py  test_validation_leakage.py  test_validation_mc.py  test_walkforward.py
