[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "etf"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2", "numpy>=1.26", "xgboost>=2.0", "scikit-learn>=1.4",
  "yfinance>=0.2.40", "pandas-datareader>=0.10", "pyarrow>=15",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8", "jupyter>=1.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = ["live: hits external network (skipped by default)"]
addopts = "-m 'not live'"
